added the links to contact section

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <p class="contact-info">
       Amir Faisal, PhD<br>
       Associate Professor<br>
-      amir.faisal@lums.edu.pk<br>
-      info@biotechig.com<br><br>
+      <a href="mailto:amir.faisal@lums.edu.pk">amir.faisal@lums.edu.pk</a><br>
+      <a href="mailto:info@biotechig.com">info@biotechig.com</a> <br>
     
       Syed Babar Ali School of Science and Engineering (SBASSE),<br>
       Lahore University of Management Sciences (LUMS),<br>
