--- a/header.html
+++ b/header.html
@@ -18,6 +18,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="facilities.html">Facilities</a></li>
+      <li><a href="team.html">Team</a></li>
       <li><a href="#contact-info">Contact</a></li>
     </ul>
   </nav>
