added images for services page

--- a/services.html
+++ b/services.html
@@ -8,6 +8,36 @@
 </head>
 <body>
       <div id="header"></div>
+
+<section class="services-section">
+  
+    <div class="services-column services-text">
+        <h2 class="services-title">Our Services (Wet lab)</h2>
+        <hr class="services-divider">
+
+        <p class="services-intro">
+            To aid your drug discovery efforts, we offer the following cellular assays/experiments:
+        </p>
+
+        <ul class="services-list">
+            <li>Proliferation assays (SRB, MTT, MTS, ADP Glo etc.) for drug evaluation (Screening, IC50s etc.)</li>
+            <li>Apoptotic assays (Annexin PI staining, PARP and caspase 3/7 cleavage)</li>
+            <li>Degradation assays for PROTACs</li>
+            <li>Immunofluorescence</li>
+            <li>3D growth of spheroids and colony formation</li>
+            <li>Western blotting</li>
+            <li>Drug combination studies</li>
+            <li>Gene expression analysis through q-PCR</li>
+        </ul>
+    </div>
+    <div class="services-column services-image">
+        <img src="images/wetlab1.png" alt="Wet lab experiment">
+    </div>
+
+</section>
+
+
+
       <div id="footer"></div>
  <script>
   // Load header and then attach event listeners
