made few changes in UI of pages

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     </h2>
     <hr class="mission-divider">
 
-    <p class="mission-intro">
-      <strong><em>Biotech Innovation Group (BIG)</em></strong> is dedicated to pioneering
+    <p class="mission-intro" style="color: #74B843;">
+      <strong style=" color: #74B843;"><em>Biotech Innovation Group (BIG)</em></strong> is dedicated to pioneering
       scientific research and driving innovation.
     </p>
 
