--- a/services.html
+++ b/services.html
@@ -10,9 +10,24 @@
     <div id="header"></div>
 
     <!-- Services Section -->
+    
+
+    <!-- Slider Section -->
+    <section class="services-slider-section">
+        <h2 class="services-slider-title"><strong>Our Services</strong></h2>
+        <div class="slider">
+            <div class="slides">
+                <img src="images/wetlab2.png" alt="Service 1">
+                <img src="images/insilico2.png" alt="Service 2">
+                <img src="images/insilico3.png" alt="Service 3">
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+        </div>
+    </section>
     <section class="services-section">
         <div class="services-column services-text">
-            <h2 class="services-title">Our Services (Wet lab)</h2>
+            <h2 class="services-title">Wet lab Services</h2>
             <hr class="services-divider">
 
             <p class="services-intro">
@@ -35,19 +50,32 @@
         </div>
     </section>
 
-    <!-- Slider Section -->
-    <section class="services-slider-section">
-        <h2 class="services-slider-title">Our Services</h2>
-        <div class="slider">
-            <div class="slides">
-                <img src="images/wetlab2.png" alt="Service 1">
-                <img src="images/insilico2.png" alt="Service 2">
-                <img src="images/insilico3.png" alt="Service 3">
-            </div>
-            <button class="prev">&#10094;</button>
-            <button class="next">&#10095;</button>
+        <!-- New Services Section (In Silico) -->
+    <section class="services-section">
+        <div class="services-column services-text">
+            <h2 class="services-title">In Silico Services</h2>
+            <hr class="services-divider">
+
+            <p class="services-intro">
+                To support your computational drug discovery and analysis needs, we offer:
+            </p>
+
+            <ul class="services-list">
+                <li>Molecular docking studies</li>
+                <li>Virtual screening of compounds</li>
+                <li>ADMET prediction</li>
+                <li>Protein-ligand interaction analysis</li>
+                <li>Homology modeling</li>
+                <li>Molecular dynamics simulations</li>
+                <li>Binding free energy calculations</li>
+                <li>Custom computational workflows</li>
+            </ul>
+        </div>
+        <div class="services-column services-image">
+            <img src="images/insilico1.png" alt="In Silico Services">
         </div>
     </section>
+
 
     <div id="footer"></div>
 
