made few UI adjustments in team page and added the functionality of email in footer

--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@
       <div id="header"></div>
 
    <section class="team-section">
-    <h2 class="team-title">Team</h2>
+    <h2 class="team-title">Team Members</h2>
     <hr class="team-divider">
 
     <div class="team-container">
