--- a/footer.html
+++ b/footer.html
@@ -7,9 +7,9 @@
         <p class="contact-name">Amir Faisal, PhD</p>
         <p class="contact-title">Associate Professor</p>
         <p class="contact-email">
-          <a href="mailto:amir.faisal@lums.edu.pk">amir.faisal@lums.edu.pk</a><br>
+          <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amir.faisal@lums.edu.pk" target="_blank">amir.faisal@lums.edu.pk</a><br>
      
-          <a href="mailto:info@biotechig.com">info@biotechig.com</a>
+          <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@biotechig.com" target="_blank">info@biotechig.com</a>
         </p>
       </div>
       
