separated the css files for each page and resolved the image issue in services and about page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/aboutstyles.css">
     <title>About Us</title>
 </head>
 <body>
@@ -38,7 +38,7 @@
 
   <!-- Right Image Column -->
   <div class="lums-image">
-    <img src="images/lums-building.png" alt="LUMS Building">
+    <img src="images/lums-SSE.jpg" alt="LUMS Building">
   </div>
 </section>
 
