--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/servicesStyles.css">
     <title>Services</title>
 </head>
 <body>
@@ -42,8 +42,8 @@
                 <li>Gene expression analysis through q-PCR</li>
             </ul>
         </div>
-        <div class="services-column services-image">
-            <img src="images/wetlab1.png" alt="Wet lab experiment">
+        <div class="services-column services-wetlabimage">
+            <img src="images/wetlab.png" alt="Wet lab experiment">
         </div>
     </section>
 
@@ -66,7 +66,7 @@
                 <li>Custom computational workflows</li>
             </ul>
         </div>
-        <div class="services-column services-image">
+        <div class="services-column services-inSilicoimage">
             <img src="images/insilico1.png" alt="In Silico Services">
         </div>
     </section>
