have  made  a separate page for contact us

--- a/header.html
+++ b/header.html
@@ -19,7 +19,8 @@
       <li><a href="services.html">Services</a></li>
       <li><a href="facilities.html">Facilities</a></li>
       <li><a href="team.html">Team</a></li>
-      <li><a href="#contact-info">Contact</a></li>
+      <li><a href="contactUs.html">Contact</a></li>
+      <!-- <li><a href="#contact-info">Contact</a></li> -->
     </ul>
   </nav>
 </header>
