added a direct compose mail functionality in contact Us page

--- a/contactUs.html
+++ b/contactUs.html
@@ -363,12 +363,10 @@
             </p>
             <ul class="email-list">
               <li>
-                <a href="mailto:amir.faisal@lums.edu.pk"
-                  >amir.faisal@lums.edu.pk</a
-                >
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amir.faisal@lums.edu.pk" target="_blank">amir.faisal@lums.edu.pk</a>
               </li>
               <li>
-                <a href="mailto:info@biotechig.com">info@biotechig.com</a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@biotechig.com" target="_blank">info@biotechig.com</a>
               </li>
             </ul>
 
