just arranged the code and changed the layout for services page

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
   <!-- Right Image Column -->
   <div class="lums-image">
-    <img src="images/lums-SSE.jpg" alt="LUMS Building">
+    <img src="images/LumsImages/lums-SSE.jpg" alt="LUMS Building">
   </div>
 </section>
 
@@ -50,30 +50,30 @@
     <div class="choose-container">
         <div class="choose-column">
             <div class="choose-item">
-                <img src="images/team.png" alt="Experienced Team">
+                <img src="images/whyCooseUs/team.png" alt="Experienced Team">
                 <span>Experienced team with diverse expertise</span>
             </div>
             <div class="choose-item">
-                <img src="images/cost.png" alt="Cost-effectiveness">
+                <img src="images/whyCooseUs/cost.png" alt="Cost-effectiveness">
                 <span>Cost-effectiveness</span>
             </div>
             <div class="choose-item">
-                <img src="images/time.png" alt="Agility and Flexibility">
+                <img src="images/whyCooseUs/time.png" alt="Agility and Flexibility">
                 <span>Agility and Flexibility</span>
             </div>
         </div>
 
         <div class="choose-column">
             <div class="choose-item">
-                <img src="images/Quality.png" alt="Quality Data">
+                <img src="images/whyCooseUs/Quality.png" alt="Quality Data">
                 <span>Quality data and results</span>
             </div>
             <div class="choose-item">
-                <img src="images/communication.png" alt="Communication">
+                <img src="images/whyCooseUs/communication.png" alt="Communication">
                 <span>Excellent communication & customer service</span>
             </div>
             <div class="choose-item">
-                <img src="images/environment.png" alt="Commitment">
+                <img src="images/whyCooseUs/environment.png" alt="Commitment">
                 <span>Commitment to environmental & social responsibility</span>
             </div>
         </div>
