--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
                 <p><strong>Amir Faisal, PhD</strong> (FMI, Switzerland), <em>Cell Biology</em></p>
                 <p>Associate Professor, LUMS, Lahore</p>
                 <p>24+ years of experience in Cell Signaling, Cancer Drug Discovery</p>
-                <p>62 Publications (IF: 355) <a href="#" target="_blank">Google Scholar</a></p>
+                <p> <a href="#">Google Scholar</a></p>
             </div>
         </div>
 
@@ -36,7 +36,7 @@
                 <p><strong>Muhammad Shoaib, PhD</strong> (Paris-Sud University, France), <em>Molecular and Cell Biology</em></p>
                 <p>Associate Professor, LUMS, Lahore</p>
                 <p>18+ years of experience in Molecular Biology, Biochemistry, Epigenetics, Cancer Biology</p>
-                <p>18 Publications (IF: 151) <a href="#" target="_blank">Google Scholar</a></p>
+                <p> <a href="#" >Google Scholar</a></p>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
                 <p><strong>Safee Ullah Chaudhary, PhD</strong> (KAIST, South Korea), <em>Bio and Brain Engineering</em></p>
                 <p>Associate Professor, LUMS, Lahore</p>
                 <p>18+ years of experience in Bioinformatics and Biomedical Engineering</p>
-                <p>31 Publications (IF: 166) <a href="#" target="_blank">Google Scholar</a></p>
+                <p><a href="#">Google Scholar</a></p>
             </div>
         </div>
 
@@ -60,7 +60,7 @@
                 <p><strong>Muhammad Tariq, PhD</strong> (FMI, Switzerland), <em>Cell Biology</em></p>
                 <p>Professor, LUMS, Lahore</p>
                 <p>25+ years of experience in Cell and Molecular Biology and Epigenetics</p>
-                <p>23 Publications (IF: 148) <a href="#" target="_blank">Google Scholar</a></p>
+                <p><a href="#">Google Scholar</a></p>
             </div>
         </div>
 
@@ -72,7 +72,7 @@
                 <p><strong>Zaigham Shahzad, PhD</strong> (SupAgro, France), <em>Population Genetics</em></p>
                 <p>Associate Professor, LUMS, Lahore</p>
                 <p>13+ years of experience in Population and Quantitative Genetics</p>
-                <p>24 Publications (IF: 305) <a href="#" target="_blank">Google Scholar</a></p>
+                <p><a href="#">Google Scholar</a></p>
             </div>
         </div>
 
