--- a/services.html
+++ b/services.html
@@ -111,9 +111,7 @@
         <div class="cta-container">
             <h2>Ready to Accelerate Your Research?</h2>
             <p>Contact us today to discuss how our services can support your specific needs</p>
-            <button class="cta-button" onclick="window.location.href='contactUs.html'">
-  Get in Touch
-</button>
+            <button class="cta-button" onclick="window.location.href='contactUs.html'">Contact Us</button>
 
         </div>
     </section>
@@ -134,9 +132,9 @@
             });
 
         // Load footer
-        fetch('footer.html')
-            .then(res => res.text())
-            .then(data => document.getElementById('footer').innerHTML = data);
+  
     </script>
+      <p class="copytag">&copy; 2025 Biotech Innovation Group. All rights reserved.</p>
+
 </body>
 </html>
