--- a/facilities.html
+++ b/facilities.html
@@ -238,9 +238,9 @@
             });
 
         // Load footer
-        fetch('footer.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('footer').innerHTML = data);
+    
     </script>
+      <p class="copytag">&copy; 2025 Biotech Innovation Group. All rights reserved.</p>
+
 </body>
 </html>
